Check for docker

--- a/.env.example
+++ b/.env.example
@@ -52,6 +52,7 @@ OPENCODE_VERSION=latest
 # but the contents will be ephemeral and discarded when the container is removed.
 #
 # If a directory is provided, the configuration will persist across sessions.
+# The path must be absolute.
 # This can be the standard host location (~/.config/opencode) or any directory you
 # choose, such as a folder managed in your dotfiles or tracked in git.
 # See the 'config_example' README.md for an example opencode config directory structure.
@@ -104,6 +105,7 @@ OPENCODE_VERSION=latest
 # OpenCode Server Configuration (Optional)
 # ========================================
 # Use these if you're connecting to a remote OpenCode server
+# This has not been tested yet
 # OPENCODE_SERVER_URL=https://your-opencode-server.com
 # OPENCODE_SERVER_PASSWORD=your-secure-password
 
