--- a/.env.example
+++ b/.env.example
@@ -13,10 +13,11 @@
 # Copy this file to .env and fill in your actual values. It will automatically be
 # copied when you first run the codebox.sh script if .env does not already exist.
 # Most settings can be left as default or blank.
-# Reccommended:
-# - Confirm .env is in .gitignore to avoid committing secrets!
+
+# RECCOMMENDED:
 # - Set HOST_OPENCODE_CONFIG_DIR to persist OpenCode config across sessions
 # - Set DOCKER_PACKAGES to add useful CLI tools at build time
+# - Add your API keys (if needed) for access to GPT, Claude, Gemini, etc.
 
 # =============================================================================
 # Docker Build Configuration
