Improve .env defaults

--- a/.env.example
+++ b/.env.example
@@ -12,12 +12,15 @@
 # This is the example environment configuration file for CodeBox.
 # Copy this file to .env and fill in your actual values. It will automatically be
 # copied when you first run the codebox.sh script if .env does not already exist.
+
 # Most settings can be left as default or blank.
 
 # RECCOMMENDED:
 # - Set HOST_OPENCODE_CONFIG_DIR to persist OpenCode config across sessions
 # - Set DOCKER_PACKAGES to add useful CLI tools at build time
 # - Add your API keys (if needed) for access to GPT, Claude, Gemini, etc.
+# - Change TZ to your local timezone for correct session times [Default: America/Edmonton]
+# - Add PROTECTED_DIRS if you want to protect additional directories
 
 # =============================================================================
 # Docker Build Configuration
@@ -28,18 +31,19 @@
 # GID=
 # USERNAME=dev
 
-# OpenCode version to install (use "latest" or specific version like "v1.1.20")
-OPENCODE_VERSION=latest
+# OpenCode version to install (use "latest" [default] or specific version like "v1.1.20")
+# OPENCODE_VERSION=latest
 
 # Container root directory name (default: BOX)
 # This creates paths like /BOX/hostname/dirname inside the container
 # CODEBOX_NAME=BOX
 
 # Optional extra packages to add at build time (SPACE-SEPARATED)
-# Required packages already in the Dockerfile: ca-certificates, curl, git, bash, jq
-# Optional examples: vim, nano, htop, wget, unzip, tree, less, openssh-client
+# Packages already in the Dockerfile:
+# - ca-certificates, ubuntu-keyring, curl, git, bash, ripgrep, less, jq, tzdata
+# Optional examples: vim, nano, htop, wget, unzip, tree, openssh-client
 # Example: DOCKER_PACKAGES=tree vim wget unzip
-# DOCKER_PACKAGES=tree
+# DOCKER_PACKAGES=
 
 # =============================================================================
 # OpenCode Config Directory
@@ -59,9 +63,9 @@ OPENCODE_VERSION=latest
 # See the 'config_example' README.md for an example opencode config directory structure.
 # HOST_OPENCODE_CONFIG_DIR=/path/to/home/.config/opencode
 
-# ========================================
+# =============================================================================
 # LLM Provider API Keys (uncomment and add as needed)
-# ========================================
+# =============================================================================
 
 # OpenAI Plus/Pro and GitHub Copilot subscriptions
 # - See the README for instructions on connecting
@@ -93,26 +97,26 @@ OPENCODE_VERSION=latest
 # PERPLEXITY_API_KEY=
 # DEEPSEEK_API_KEY=
 
-# ========================================
+# =============================================================================
 # Git Configuration
-# ========================================
+# =============================================================================
 # These are used when OpenCode makes commits on your behalf
 # GIT_AUTHOR_NAME=Your Name
 # GIT_AUTHOR_EMAIL=your.email@example.com
 # GIT_COMMITTER_NAME=Your Name
 # GIT_COMMITTER_EMAIL=your.email@example.com
 
-# ========================================
+# =============================================================================
 # OpenCode Server Configuration (Optional)
-# ========================================
+# =============================================================================
 # Use these if you're connecting to a remote OpenCode server
 # This has not been tested yet
 # OPENCODE_SERVER_URL=https://your-opencode-server.com
 # OPENCODE_SERVER_PASSWORD=your-secure-password
 
-# ========================================
+# =============================================================================
 # Advanced Configuration (Optional)
-# ========================================
+# =============================================================================
 # Uncomment and modify as needed
 
 # Custom git config path
@@ -122,20 +126,21 @@ OPENCODE_VERSION=latest
 # DOCKER_MEMORY_LIMIT=8G
 # DOCKER_CPU_LIMIT=4
 
-# Local timezone for correct session times (example for Edmonton, Canada)
-TZ=America/Edmonton
+# Local timezone for correct session times
+# If unset, codebox defaults to America/Edmonton at runtime
+# TZ=America/Edmonton
 
-# ========================================
+# =============================================================================
 # Directory Protection
-# ========================================
+# =============================================================================
 # Additional directories that require --force flag to run codebox
 # Provide a colon-separated list of absolute paths
 # Default protected: $HOME and any directory outside $HOME
 # Example: PROTECTED_DIRS="/Users/username/important:/Users/username/production"
 # PROTECTED_DIRS=
 
-# ========================================
+# =============================================================================
 # CodeBox Configuration
-# ========================================
+# =============================================================================
 # Display volume mounts in startup banner (true/false) [default: true]
 # SHOW_MOUNTS=true
